--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^5.1.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/drawer": "^6.1.8",
@@ -18,6 +19,7 @@
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^5.14.5",
     "firebase": "^9.6.7",
+    "moment": "^2.29.1",
     "react": "17.0.2",
     "react-native": "0.67.3",
     "react-native-pager-view": "^5.4.11",
