--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.16.1",
     "@react-native-community/datetimepicker": "^5.1.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-picker/picker": "^2.3.1",
