--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^1.16.1",
     "@react-native-community/datetimepicker": "^5.1.0",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-google-signin/google-signin": "^7.2.0",
     "@react-native-picker/picker": "^2.3.1",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/drawer": "^6.1.8",
@@ -24,6 +25,7 @@
     "moment": "^2.29.1",
     "react": "17.0.2",
     "react-native": "0.67.3",
+    "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^5.4.11",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.12.0",
